--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,12 @@
         android:theme="@style/Theme.Cases"
         tools:targetApi="31">
         <activity
-            android:name=".activities.trash.features.view.TrashCaseView"
-            android:screenOrientation="portrait"
+            android:name=".SearchTrashCase"
             android:exported="false" />
+        <activity
+            android:name=".activities.trash.features.view.ViewTrashCase"
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.trash.TrashCase"
             android:exported="false"
