Trying to figure out why the trash entity cannot get the data onto its page. Fix search centering. Implement something for restore data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:theme="@style/Theme.Cases"
         tools:targetApi="31">
         <activity
-            android:name=".SearchTrashCase"
+            android:name=".activities.trash.features.search.SearchTrashCase"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".activities.trash.features.view.ViewTrashCase"
